force-app/main/default/objects/Uptiq_AI_Rule_Engine__c/Uptiq_AI_Rule_Engine__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Uptiq AI Rule Engine</label>
</CustomObject>