force-app/main/default/objects/Uptiq_AI_Rule_Engine__c/fields/File_Upload_Service_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>File_Upload_Service_Email_Address__c</fullName>
    <description>This is the &quot;To&quot; email address used to trigger the Salesforce Email Service that handles large file uploads to Uptiq storage. It allows asynchronous processing using the enhanced heap size limits provided by email services.</description>
    <inlineHelpText>Enter the email address that will be used to trigger the file upload service for large files. This address should point to the configured Salesforce Email Service for Uptiq integration.</inlineHelpText>
    <label>File Upload Service Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>