force-app/main/default/objects/Uptiq_AI_Rule_Engine__c/fields/Send_Uptiq_Agent_Callout_Success_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Uptiq_Agent_Callout_Success_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field can be used to send UPTIQ AI Agent callout success email</description>
    <label>Send Uptiq Agent Callout Success Email</label>
    <type>Checkbox</type>
</CustomField>