force-app/main/default/objects/Uptiq_AI_Rule_Engine__c/fields/Store_Uptiq_Request_and_Response__c.field-meta.xml
<CustomField>
    <fullName>Store_Uptiq_Request_and_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field can be used to store request and response as txt file for Uptiq AI Agent callouts</description>
    <label>Store Uptiq Request and Response</label>
    <type>Checkbox</type>
</CustomField>