force-app/main/default/objects/Uptiq_AI_Rule_Engine__c/fields/Uptiq_AI_Storage_Path__c.field-meta.xml
<CustomField>
    <fullName>Uptiq_AI_Storage_Path__c</fullName>
    <description>This field represents the storage path in Uptiq where documents can be uploaded</description>
    <label>Uptiq AI Storage Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>