force-app/main/default/objects/Uptiq_AI_Rule_Engine__c/fields/Uptiq_Exception_Emails__c.field-meta.xml
<CustomField>
    <fullName>Uptiq_Exception_Emails__c</fullName>
    <description>This field contains email addresses designated to receive exception notification emails</description>
    <label>Uptiq Exception Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>