force-app/main/default/objects/Uptiq_AI_Rule_Engine__c/fields/Uptiq_Retry_Delay_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Uptiq_Retry_Delay_In_Minutes__c</fullName>
    <description>This field specifies the time interval (in minutes) to wait before attempting to retry a failed operation or process</description>
    <label>Uptiq Retry Delay In Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>