force-app/main/default/objects/Uptiq_AI_Rule_Engine__c/fields/Uptiq_Timeout_Limit_In_Miliseconds__c.field-meta.xml
<CustomField>
    <fullName>Uptiq_Timeout_Limit_In_Miliseconds__c</fullName>
    <description>This field defines the maximum time duration (in milliseconds) that a process or operation is allowed to execute before being automatically terminated</description>
    <label>Uptiq Timeout Limit In Miliseconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>